# wanderbound

./: .dockerignore  .env.example  .gitattributes  .gitignore  .htmlhintrc  .impeccable.md  .pre-commit-config.yaml  .stylelintrc.json  .yamllint  =0.25.0  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  MAP_COORDINATE_ISSUE.md  PRIVACY.md  README.md  SECURITY.md  SUGGESTIONS.md  TERMS.md  cliff.toml  commitlint.config.js  compose.override.yml  compose.yml  docker-bake.hcl  docker-compose.yml  fonts.json  garage.toml  knip.json  main.py  mise.toml  package.json  pdf_to_pngs.sh  pyproject.toml  renovate.json  requirements.txt  setup.py  sudamerica.sh  (+1 more)
backend/: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  logging.json  openapi.json  pyproject.toml  test_segments.ipynb
backend/app/: frontend.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 086472e34c04_add_is_demo_to_user.py  1f6d2e8c9a0b_widen_upload_session_byte_counts.py  24f88e631006_add_orientations_to_step.py  27083dd2e4fd_add_safe_margin_mm_to_album.py  27a78d504300_initial.py  3a1b9d7f6c20_add_album_chapters.py  3a6e5f8b1c2d_add_perceptual_media_hashes.py  45e0a9ed4b74_initial.py  480272001570_initial_revision.py  4c070c5eac8d_add_profile_image_path_to_user.py  4d5e0f13354e_initial_revision.py  4d9e8a71c2b3_processing_workflow_tables.py  505c5fb1dc82_add_timezone_id_to_segment.py  5068e2946fb9_rename_upgraded_photos_to_upgraded_media.py  68af54bc9f61_initial_revision.py  6eee573c95c0_rename_excluded_steps_to_hidden_steps_.py  7c2a9f4d8e10_replace_upload_session.py  7f4c2a9d6b10_drop_album_level_content.py  8b0c4f2d9e11_runtime_artifact_state_tables.py  8ec97bc11b0c_initial_revision.py  9f7c8a4d1b2e_external_media_schema.py  a1c3e5f70001_drop_user_last_name.py  a4e1c7b29d53_add_upload_trip_choices.py  a6f1add50e1f_steps_ranges_string_to_json.py  afedc79fdb8b_add_body_font_to_album.py  b119e3ee2c5b_add_google_photos_columns.py  b2121f6c7d00_initial.py  b2c0d72bbd42_replace_steps_ranges_with_excluded_steps.py  b3e2f7c81d44_steps_ranges_index_to_date.py  b3f1a2c8d9e0_storage_eviction.py  b6d2f9a31c74_add_album_activity.py  c3d4e5f60002_add_microsoft_sub.py  c4d9e1f23a77_maps_ranges_string_to_json.py  d4653fc8f2f2_add_route_to_segment.py  d5e2f3a41b88_locale_underscore_to_hyphen.py  d7be05cf7e4d_add_first_name_and_last_name_to_user.py  dcb0d4e8f8b3_add_media_resolution_warning_preset_to_album.py  eebe9f6ca7bc_initial_schema.py  f097a964b67c_initial_schema.py  f13331818c11_add_font_to_album.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/routes/: albums.py  assets.py  auth.py  config.py  external_media.py  google_photos.py  health.py  media_imports.py  uploads.py  users.py
backend/app/core/: async_helpers.py  browser.py  client.py  config.py  db.py  encryption.py  http.py  http_clients.py  locks.py  logging.py  observability.py  resources.py  sentry.py  tokens.py  uvicorn_logging.json  worker_threads.py
backend/app/logic/: album_scope.py  chapters.py  chunked_upload.py  country_colors.json  country_colors.py  demo_i18n.py  eviction.py  export.py  matching.py  media_import.py  media_upgrade.py  open_meteo.py  pdf.py  pdf_chapters.py  photo_upgrade.py  pipeline.py  processing.py  processing_operations.py  reconcile.py  route_matching.py  segment_routes.py  session.py  step_media.py  trip_pipeline.py  trip_processing.py  upload.py  weather.py
backend/app/logic/external_media/: __init__.py  album_media.py  intake.py  operations.py  undo.py
backend/app/logic/layout/: __init__.py  builder.py  media.py
backend/app/logic/media_upgrade/: __init__.py  hash_cache.py  hashes.py  matching.py  phash_matching.py  pipeline.py  processing.py
backend/app/logic/spatial/: elevation.py  geo.py  peaks.py  segments.py  simplify.py  types.py
backend/app/logic/uploads/: __init__.py  cleanup.py  files.py  finalize.py  progress.py
backend/app/logic/workflows/: processing.py  recovery.py  runtime.py  uploads.py
backend/app/models/: __init__.py  album.py  album_media.py  db.py  geo.py  google_photos.py  ids.py  polarsteps.py  processing.py  segment.py  step.py  trips.py  types.py  upload.py  user.py  weather.py
backend/app/services/: google_photos.py  mapbox.py  open_meteo.py  upload_store.py
backend/app/services/open_meteo/: __init__.py  client.py  elevation.py  weather.py
backend/scripts/: export_openapi.py  format.sh  prestart.sh  test.sh
backend/src/app/: main.py
backend/src/app/api/: deps.py  router.py
backend/src/app/core/: client.py  logging.py  settings.py
backend/src/app/logic/: country_colors.json  country_colors.py  segments.py  weather.py
backend/src/app/logic/data/: country_colors.py  (+2 more)
backend/src/app/models/: db.py  polarsteps.py  trips.py
backend/tests/: conftest.py  factories.py  test_activity_tracking.py  test_album_chapters_migration.py  test_albums.py  test_albums_media.py  test_alembic_environment.py  test_assets.py  test_auth.py  test_builder.py  test_chunked_upload.py  test_chunked_upload_routes.py  test_config.py  test_config_defaults.py  test_container_start.py  test_country_colors.py  test_dbos_processing_workflow.py  test_dbos_recovery_check_script.py  test_dbos_runtime.py  test_dbos_upload_workflow.py  test_demo.py  test_demo_i18n.py  test_demo_i18n_integration.py  test_deps.py  test_direct_upload_routes.py  test_elevation.py  test_encryption.py  test_eviction.py  test_export.py  test_external_media_migration.py  test_external_media_models.py  test_external_media_operations.py  test_external_media_routes.py  test_frontend.py  test_google_photos_routes.py  test_google_photos_service.py  test_http.py  test_http_clients.py  test_layout.py  test_locks.py  (+40 more)
backend/tests/__snapshots__/: test_segments.ambr
backend/tests/helpers/: __init__.py  album_fixtures.py  albums.py  external_media.py  external_media_fixtures.py  google_photos.py  google_photos_fixtures.py  http.py  user_fixtures.py  users.py
backend/tests/logic/: test_album_scope.py
backend/tests/services/: test_upload_store.py
backend/typings/simplification/: cutil.pyi
(+754 files in other folders)
