[project]
name = "app"
version = "1.0.0"
requires-python = ">=3.14,<4.0"

dependencies = [
    "Pillow~=12.0",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "rich~=14.0",
    "fastapi[standard]<1",
    "python-multipart<1",
    "uvicorn<1",
    "sqlalchemy~=2.0",
    "sqlmodel<1",
    "psycopg[binary]~=3.1",
    "alembic~=1.12",
    "numpy~=2.0",
    "httpx<1",
    "hishel[httpx]~=1.0",
    "httpx-retries<1",
    "polars~=1.38",
    "playwright~=1.52",
    "coloraide~=8.7",
    "aiolimiter~=1.2",
    "simplification~=0.7",
    "itsdangerous~=2.2",
    "pyjwt[crypto]~=2.0",
    "puremagic>=2.1.0",
    "sentry-sdk[fastapi]~=2.35",
]

[dependency-groups]
dev = [
    "ruff<1",
    "ty<1",
    "deptry<1",
    "vulture>=2.16",
    "pytest~=9.0",
    "pytest-asyncio~=1.0",
    "pytest-randomly~=3.16",
    "aiosqlite~=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.vulture]
paths = ["app", "tests"]
exclude = ["alembic"]
min_confidence = 80
ignore_decorators = ["@router.*", "@app.*", "@pytest.fixture", "@pytest_asyncio.fixture", "@pytest.mark.*"]
ignore_names = ["model_config", "model_validator", "field_validator", "computed_field", "dialect"]

[tool.ruff]
exclude = ["alembic", "scripts"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # blank line before class docstring (conflicts with D211)
    "D213",   # multi-line summary on second line (conflicts with D212)
    "COM812", # missing trailing comma (conflicts with formatter)
    "ISC001", # implicit string concat (conflicts with formatter)
    "EM101",  # string literal in exception
    "EM102",  # f-string in exception
    "PLR2004", # magic value in comparison
    "TRY003", # long exception message
    "D10",    # missing docstrings
    "D401",   # imperative mood in docstring
    "D413",   # blank line after last docstring section
    "E741",   # ambiguous variable name
    "TID252", # relative parent imports are fine in an app
    "ANN401", # Any is unavoidable in some cases
    "N802",   # uppercase property names for settings
    "ARG001", # FastAPI path params are used for routing, not in function body
    "TC001",  # Pydantic/FastAPI need runtime type access
    "TC003",  # same as above for stdlib types
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # assert is fine in tests
    "PT001", # @pytest.fixture() parentheses style
    "RUF002", # ambiguous unicode (en-dash in docstrings)
    "SLF001", # private member access (testing internals)
    "PLR0913", # test helpers often need many parameters
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ty.rules]
invalid-type-form = "ignore"  # ty false positive on properties named `datetime`

[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

[tool.deptry.per_rule_ignores]
# DEP002 = "Unused dependency"
DEP002 = [
    "ruff",
    "deptry",
    "uvicorn",
    "python-multipart",
    "psycopg",  # SQLAlchemy driver loaded via postgresql+psycopg:// URI
    "itsdangerous",  # Required by Starlette SessionMiddleware at runtime
    "pytest-asyncio",  # pytest plugin, loaded via pyproject.toml config
    "pytest-randomly",
]
# DEP003 = "Transitive dependency"
DEP003 = ["app", "starlette"]  # starlette bundled with FastAPI (SessionMiddleware)

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "unit: pure logic, no IO or DB",
    "integration: uses DB or external service mocks",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-x",
]
